task5/tests/our-tests/output/t2.out
lli: <stdin>:38:20: error: use of undefined value '%-22044'
%t6 = add i32 %t7, %-22044
                   ^

